--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,14 +11,20 @@ Description: Simulation and estimation of copula-based models for time series.
 Depends: R (>= 3.1.0)
 License: GPL-3
 Lazydata: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Encoding: UTF-8
 Imports:
     zoo,
     xts,
     FKF,
     ltsa,
-    rvinecopulib
+    rvinecopulib,
+    methods,
+    stats,
+    graphics,
+    utils,
+    arfima,
+    Matrix
 Collate:
     'basic_objects.R'
     'armacopula.R'
