--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,3 +66,7 @@ exportMethods(plot)
 exportMethods(quantile)
 exportMethods(show)
 exportMethods(sim)
+import(graphics)
+import(methods)
+import(stats)
+import(utils)
