--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(fit)
 export(get_tau)
 export(kfilter)
 export(margin)
+export(non_invert)
+export(non_stat)
 export(pcoincide)
 export(plot_armacopula)
 export(plot_dvinecopula)
