new plotting concept

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,14 +11,13 @@ export(armacopula)
 export(dmarg)
 export(dvinecopula)
 export(fit)
-export(get_tau)
+export(glag)
+export(kendall)
 export(kfilter)
 export(margin)
 export(non_invert)
 export(non_stat)
 export(pcoincide)
-export(plot_armacopula)
-export(plot_dvinecopula)
 export(plot_volprofile)
 export(plot_volproxy)
 export(pmarg)
@@ -52,9 +51,12 @@ exportClasses(vtscopula)
 exportMethods(coef)
 exportMethods(coerce)
 exportMethods(fit)
+exportMethods(glag)
+exportMethods(kendall)
 exportMethods(logLik)
 exportMethods(plot)
 exportMethods(quantile)
+exportMethods(resid)
 exportMethods(show)
 exportMethods(sim)
 import(graphics)
