--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(qmarg)
 export(safe_ses)
 export(sigmastarma)
 export(sim)
+export(simdvine)
 export(stochinverse)
 export(strank)
 export(swncopula)
