--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tscopula
 Type: Package
 Title: Time Series Copula Models
-Version: 0.2.0
-Date: 2021-06-25
+Version: 0.2.1
+Date: 2021-07-03
 Authors@R: c(person("Alexander J.", "McNeil", email = "alexanderjmcneil@gmail.com", 
                   role = c("aut", "cre")),
                   person("Martin", "Bladt", email = "martinbladt@gmail.com", 
@@ -30,8 +30,7 @@ Imports:
     rvinecopulib,
     FitAR,
     arfima,
-    Matrix,
-    copula
+    Matrix
 Collate:
     'basic_objects.R'
     'armacopula.R'
