--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R:
             family = "Bladt", 
             email = "martinbladt@gmail.com", 
             role = "aut"))
-Maintainer: Alexander J. McNeil <alexanderjmcneil@gmail.com>                  
+Maintainer: Alexander McNeil <alexanderjmcneil@gmail.com>                  
 Description: Functions for the analysis of time series using copula models.  
     The package is based on methodology described in the following references.
     McNeil, A.J. (2021) <doi:10.3390/risks9010014>,
