Exporting three functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(rslaplace)
 export(rsst)
 export(rst)
 export(safe_ses)
+export(setwcopula)
 export(sigmastarma)
 export(sim)
 export(simdvine)
@@ -64,8 +65,10 @@ export(tscm)
 export(vdownprob)
 export(vgradient)
 export(vinverse)
+export(vtparlist)
 export(vtrans)
 export(vtscopula)
+export(vtscopula_objective)
 exportClasses(Vtransform)
 exportClasses(VtransformI)
 exportClasses(armacopula)
