Add prediction functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(Vdegenerate)
 export(Vlinear)
 export(Vsymmetric)
 export(acf2pacf)
+export(arma2dvine)
 export(armacopula)
+export(armafit2dvine)
 export(ddoubleweibull)
 export(dlaplace)
 export(dmarg)
@@ -18,6 +20,7 @@ export(dsst)
 export(dst)
 export(dvinecopula)
 export(dvinecopula2)
+export(edf)
 export(fit)
 export(glag)
 export(kendall)
@@ -86,6 +89,7 @@ exportMethods(fit)
 exportMethods(kendall)
 exportMethods(logLik)
 exportMethods(plot)
+exportMethods(predict)
 exportMethods(quantile)
 exportMethods(resid)
 exportMethods(show)
