--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tscopula
 Type: Package
 Title: Time Series Copula Models
-Version: 0.2.3
-Date: 2021-07-07
+Version: 0.2.4
+Date: 2021-12-01
 Authors@R: 
     c(person(given = "Alexander", 
              family = "McNeil", 
@@ -34,7 +34,8 @@ Imports:
     rvinecopulib,
     FitAR,
     arfima,
-    Matrix
+    Matrix,
+    kdensity
 Collate:
     'basic_objects.R'
     'armacopula.R'
