Improvements to models with empirical distribution function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(non_stat)
 export(pacf2acf)
 export(pcoincide)
 export(pdoubleweibull)
+export(pedf)
 export(plaplace)
 export(pmarg)
 export(profilefulcrum)
