--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,8 @@ Maintainer: Alexander McNeil <alexanderjmcneil@gmail.com>
 Description: Functions for the analysis of time series using copula models.  
     The package is based on methodology described in the following references.
     McNeil, A.J. (2021) <doi:10.3390/risks9010014>,
-    Bladt, M., & McNeil, A.J. (2021) <doi.org/10.1016/j.ecosta.2021.07.004>,
-    Bladt, M., & McNeil, A.J. (2021) <doi.org/10.48550/arXiv.2107.00960>.
+    Bladt, M., & McNeil, A.J. (2021) <doi:10.1016/j.ecosta.2021.07.004>,
+    Bladt, M., & McNeil, A.J. (2021) <arXiv:2107.00960>.
 Depends: R (>= 3.5.0)
 License: GPL-3
 LazyData: true
