--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(margin)
 export(non_invert)
 export(non_stat)
 export(pacf2acf)
+export(pacf2ar)
 export(pcoincide)
 export(pdoubleweibull)
 export(pedf)
