Add dvinecopula3 class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(dsst)
 export(dst)
 export(dvinecopula)
 export(dvinecopula2)
+export(dvinecopula3)
 export(edf)
 export(fit)
 export(glag)
@@ -77,6 +78,7 @@ exportClasses(VtransformI)
 exportClasses(armacopula)
 exportClasses(dvinecopula)
 exportClasses(dvinecopula2)
+exportClasses(dvinecopula3)
 exportClasses(margin)
 exportClasses(marginfit)
 exportClasses(swncopula)
