--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tscopula
 Type: Package
 Title: Time Series Copula Models
-Version: 0.3.2
-Date: 2022-05-11
+Version: 0.3.3
+Date: 2022-05-30
 Authors@R: 
     c(person(given = "Alexander", 
              family = "McNeil", 
@@ -42,6 +42,7 @@ Collate:
     'armacopula.R'
     'dvinecopula.R'
     'dvinecopula2.R'
+    'dvinecopula3.R'
     'fitting_basic.R'
     'margins.R'
     'full_models.R'
