--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ export(kfilter)
 export(kpacf_arfima)
 export(kpacf_arma)
 export(kpacf_fbn)
+export(kpacf_sarma12)
+export(kpacf_sarma4)
 export(margin)
 export(non_invert)
 export(non_stat)
