--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(arma2dvine)
 export(armacopula)
 export(armafit2dvine)
 export(ddoubleweibull)
+export(dgauss)
+export(dgauss0)
 export(dlaplace)
 export(dmarg)
 export(dsdoubleweibull)
@@ -40,6 +42,8 @@ export(pacf2ar)
 export(pcoincide)
 export(pdoubleweibull)
 export(pedf)
+export(pgauss)
+export(pgauss0)
 export(plaplace)
 export(pmarg)
 export(profilefulcrum)
@@ -48,6 +52,8 @@ export(pslaplace)
 export(psst)
 export(pst)
 export(qdoubleweibull)
+export(qgauss)
+export(qgauss0)
 export(qlaplace)
 export(qmarg)
 export(qsdoubleweibull)
@@ -55,6 +61,8 @@ export(qslaplace)
 export(qsst)
 export(qst)
 export(rdoubleweibull)
+export(rgauss)
+export(rgauss0)
 export(rlaplace)
 export(rsdoubleweibull)
 export(rslaplace)
