--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,11 +16,13 @@ export(ddoubleweibull)
 export(dgauss)
 export(dgauss0)
 export(dlaplace)
+export(dlaplace0)
 export(dmarg)
 export(dsdoubleweibull)
 export(dslaplace)
 export(dsst)
 export(dst)
+export(dst0)
 export(dvinecopula)
 export(dvinecopula2)
 export(dvinecopula3)
@@ -45,29 +47,35 @@ export(pedf)
 export(pgauss)
 export(pgauss0)
 export(plaplace)
+export(plaplace0)
 export(pmarg)
 export(profilefulcrum)
 export(psdoubleweibull)
 export(pslaplace)
 export(psst)
 export(pst)
+export(pst0)
 export(qdoubleweibull)
 export(qgauss)
 export(qgauss0)
 export(qlaplace)
+export(qlaplace0)
 export(qmarg)
 export(qsdoubleweibull)
 export(qslaplace)
 export(qsst)
 export(qst)
+export(qst0)
 export(rdoubleweibull)
 export(rgauss)
 export(rgauss0)
 export(rlaplace)
+export(rlaplace0)
 export(rsdoubleweibull)
 export(rslaplace)
 export(rsst)
 export(rst)
+export(rst0)
 export(safe_ses)
 export(setwcopula)
 export(sigmastarma)
