--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,8 @@ export(rsst)
 export(rst)
 export(rst0)
 export(safe_ses)
+export(sarma2arma)
+export(sarmacopula)
 export(setwcopula)
 export(sigmastarma)
 export(sim)
@@ -99,6 +101,7 @@ exportClasses(dvinecopula2)
 exportClasses(dvinecopula3)
 exportClasses(margin)
 exportClasses(marginfit)
+exportClasses(sarmacopula)
 exportClasses(swncopula)
 exportClasses(tscm)
 exportClasses(tscmfit)
