--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(rst)
 export(rst0)
 export(safe_ses)
 export(sarma2arma)
+export(sarma2dvine)
 export(sarmacopula)
 export(setwcopula)
 export(sigmastarma)
