new dvinecopulavt class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(dst0)
 export(dvinecopula)
 export(dvinecopula2)
 export(dvinecopula3)
+export(dvinecopulavt)
 export(edf)
 export(fit)
 export(glag)
@@ -100,6 +101,7 @@ exportClasses(armacopula)
 exportClasses(dvinecopula)
 exportClasses(dvinecopula2)
 exportClasses(dvinecopula3)
+exportClasses(dvinecopulavt)
 exportClasses(margin)
 exportClasses(marginfit)
 exportClasses(sarmacopula)
