--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tscopula
 Type: Package
 Title: Time Series Copula Models
-Version: 0.3.9
-Date: 2024-02-16
+Version: 0.4.0
+Date: 2024-08-01
 Authors@R: 
     c(person(given = "Alexander", 
              family = "McNeil", 
@@ -45,6 +45,7 @@ Collate:
     'dvinecopula.R'
     'dvinecopula2.R'
     'dvinecopula3.R'
+    'dvinecopulavt.R'
     'fitting_basic.R'
     'margins.R'
     'full_models.R'
