--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,18 @@ export(acf2pacf)
 export(arma2dvine)
 export(armacopula)
 export(armafit2dvine)
+export(armavec2list)
+export(auto_dvine)
 export(ddoubleweibull)
 export(dgauss)
 export(dgauss0)
+export(dgh)
+export(dhyp)
+export(djsu)
 export(dlaplace)
 export(dlaplace0)
 export(dmarg)
+export(dnig)
 export(dsdoubleweibull)
 export(dslaplace)
 export(dsst)
@@ -47,9 +53,13 @@ export(pdoubleweibull)
 export(pedf)
 export(pgauss)
 export(pgauss0)
+export(pgh)
+export(phyp)
+export(pjsu)
 export(plaplace)
 export(plaplace0)
 export(pmarg)
+export(pnig)
 export(profilefulcrum)
 export(psdoubleweibull)
 export(pslaplace)
@@ -59,9 +69,13 @@ export(pst0)
 export(qdoubleweibull)
 export(qgauss)
 export(qgauss0)
+export(qgh)
+export(qhyp)
+export(qjsu)
 export(qlaplace)
 export(qlaplace0)
 export(qmarg)
+export(qnig)
 export(qsdoubleweibull)
 export(qslaplace)
 export(qsst)
@@ -70,8 +84,12 @@ export(qst0)
 export(rdoubleweibull)
 export(rgauss)
 export(rgauss0)
+export(rgh)
+export(rhyp)
+export(rjsu)
 export(rlaplace)
 export(rlaplace0)
+export(rnig)
 export(rsdoubleweibull)
 export(rslaplace)
 export(rsst)
@@ -81,6 +99,8 @@ export(safe_ses)
 export(sarma2arma)
 export(sarma2dvine)
 export(sarmacopula)
+export(sarmavec2list)
+export(sdvinecopula)
 export(setwcopula)
 export(sigmastarma)
 export(sim)
@@ -105,6 +125,7 @@ exportClasses(dvinecopulavt)
 exportClasses(margin)
 exportClasses(marginfit)
 exportClasses(sarmacopula)
+exportClasses(sdvinecopula)
 exportClasses(swncopula)
 exportClasses(tscm)
 exportClasses(tscmfit)
